--- a/.github/workflows/deploy.surge.yaml
+++ b/.github/workflows/deploy.surge.yaml
@@ -31,6 +31,6 @@ jobs:
       - name: Install Surge
         run: npm install -g surge
       - name: Run Surge
-        run: surge ./ bootcampnewapp.surge.sh --token ${{secret.SURGE_TOKEN}}
+        run: surge ./ bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
   
